Not working yet, but show account form

--- a/app_server/views/account.pug
+++ b/app_server/views/account.pug
@@ -3,8 +3,9 @@ block content
   .container.main-content
   .container.main-content
     .row.mt-5.mb-2
-      .col-12
+      .col-12.text-center
         h1.text-center ACCOUNT
+        h4 work in progress
     .row
       .col-md-6.mx-auto.mb-5
         .card.parent-card#personal-info.mb-4
@@ -20,7 +21,7 @@ block content
                     type="text"
                     aria-label="Sizing example input"
                     describedby="inputGroup-sizing-default"
-                    placeholder=name
+                    value=name
                     name="name")
                 .col-12.input-group.mb-3
                   .input-group-prepend
@@ -31,7 +32,7 @@ block content
                     autocomplete="username"
                     aria-label="Sizing example input"
                     describedby="inputGroup-sizing-default"
-                    placeholder=email
+                    value=email
                     name="email")
               .row.justify-content-center.mx-4
                 button.col-lg-3.mb-4.btn.btn-default Save
