replace dashes with spaces dashboard

--- a/app_server/views/dashboard.pug
+++ b/app_server/views/dashboard.pug
@@ -8,7 +8,7 @@ block content
           .card-body
             h4.card-title Fitness Goals
             h4.text-center
-              span.badge.badge-pill=goal
+              span.badge.badge-pill=goal.replace('-', ' ')
             h4.text-center
               span.badge.badge-pill #{freq} days a week
             h4.text-center
